--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src/",
+    "paths": {
+        "@/*": ["*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
@@ -20,6 +24,7 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  "files": ["./typings.d.ts"],
   "include": [
     "src"
   ]
